--- a/hrm/views/hr_department_view.xml
+++ b/hrm/views/hr_department_view.xml
@@ -6,14 +6,13 @@
             <form string="Cấu hình công ty">
                 <sheet>
                     <group>
-                        <field name="type_block" attrs="{'readonly': [('readonly_type_block', '=', False)]}" required="1"/>
+                        <field name="type_block" attrs="{'readonly': [('readonly_type_block', '=', True)]}" required="1"/>
                         <field name="type_in_block_ecom" attrs="{'invisible': [('type_block', '!=', 'BLOCK_COMMERCE_NAME')]}" required="1"/>
                     </group>
                     <group col="2">
                         <group>
                             <field name="relate" invisible="1"/>
                             <field name="readonly_type_block" invisible="1"/>
-                            <field name="name_display" attrs="{'invisible': [('type_block', '!=', 'BLOCK_COMMERCE_NAME')]}"/>
                             <field name="name" strinvg="Tên phòng ban" attrs="{'invisible': [('type_block', '!=', 'BLOCK_OFFICE_NAME')]}" />
                             <field name="name_system" string="Tên hệ thống" attrs="{'invisible': [('relate', '!=', 3)]}"/>
                             <field name="name_company" attrs="{'invisible': [('relate', '!=', 4)]}"/>
@@ -21,7 +20,7 @@
                             <field name="type_system" string="Loại hệ thống" attrs="{'invisible': [('relate', '!=', 3)], 'required': [('relate', '=', 3)]}"/>
                             <field name="department_level" force_save="1"/>
                             <field name="company_id" invisible="1"/>
-                            <field name="parent_id" string="Phòng ban / Hệ thống / Công ty cấp trên:"/>
+                            <field name="parent_id" string="Phòng ban / Hệ thống / Công ty cấp trên:" required="1"/>
                         </group>
                         <group>
                             <field name="phone_num"/>
