--- a/hrm/views/menu.xml
+++ b/hrm/views/menu.xml
@@ -4,31 +4,15 @@
                 id="menu_field"
                 name="HRM"
                 sequence="-2"/>
-        <menuitem
-                id="config_commerce"
-                name="Cấu hình khối thương mại"
-                parent="menu_field"
-                sequence="1"/>
-<!--        <menuitem-->
-<!--                id="create_system"-->
-<!--                name="Tạo Hệ thông"-->
-<!--                parent="config_commerce"-->
-<!--                action="systems_action"-->
-<!--                sequence="10"/>-->
-<!--        <menuitem-->
-<!--                id="create_company"-->
-<!--                name="Tạo Công ty"-->
-<!--                parent="config_commerce"-->
-<!--                action="company_action"-->
-<!--                sequence="20"/>-->
+
         <menuitem
                 id="config_office"
-                name="Cấu hình khối văn phòng"
+                name="Cấu hình"
                 parent="menu_field"
                 sequence="2"/>
         <menuitem
                 id="create_department"
-                name="Phòng ban"
+                name="Cấu hình công ty"
                 parent="config_office"
                 action="departments_action"
                 sequence="10"/>
