--- a/hrm_chamcong/views/datn_checkin_checkout.xml
+++ b/hrm_chamcong/views/datn_checkin_checkout.xml
@@ -6,15 +6,57 @@
             <field name="name">Bảng CheckIn CheckOut</field>
             <field name="model">datn.hr.checkin.checkout</field>
             <field name="arch" type="xml">
-                <tree class="widget-khoi-tree"
+                <tree class="widget-department-tree"
                       decoration-info="state=='draft'"
-                      default_order="block_id">
-                    <field name="block_id"/>
+                      default_order="department_id">
+                    <field name="department_id"/>
                     <field name="name"/>
                     <field name="date_from"/>
                     <field name="date_to"/>
                     <field name="state"/>
                 </tree>
+            </field>
+        </record>
+
+                 <record id="datn_checkin_checkout_nhan_vien_form" model="ir.ui.view">
+            <field name="name">Checkin checkout nhân viên</field>
+            <field name="model">datn.hr.checkin.checkout.line</field>
+            <field name="arch" type="xml">
+                <form>
+                    <header>
+                        <button string="Gửi phê duyệt" name="action_send_approve" type="object" attrs="{'invisible': [('state','!=','draft')]}"
+                                class="oe_highlight oe_edit_only"/>
+                        <button string="Phê duyệt" name="action_approve" type="object" attrs="{'invisible': ['|', ('state','=','draft'), ('state','=','approved')]}"
+                                groups="hrm_chamcong.hrm_phe_duyet_dang_ky_nghi"
+                                class="oe_highlight oe_edit_only"/>
+                        <button string="Từ chối" name="action_refuse" type="object" attrs="{'invisible': [('state','!=','approved')]}"
+                                class="oe_highlight oe_edit_only"
+                                groups="hrm_chamcong.hrm_phe_duyet_dang_ky_nghi"/>
+                        <button string="Soạn thảo" name="action_draft" type="object"
+                                attrs="{'invisible': [('state','in',('confirmed','approved'))]}"
+                                class="oe_edit_only"
+                        />
+                        <field name="state" widget="statusbar"/>
+                    </header>
+                    <sheet>
+                           <group>
+                                <field name="employee_id"  attrs="{'readonly': [('state','!=','draft')]}"
+                                       options="{'no_quick_create': 1, 'no_create_edit': 1, 'no_open': 1, 'no_create': 1}"/>
+                                <field name="day" readonly="1"/>
+                                <field name="checkin" readonly="1"/>
+                                <field name="checkout" readonly="1"/>
+                                <field name="note" attrs="{'readonly': [('state','!=','draft')]}"/>
+                            </group>
+                            <group>
+                                <field name="nguoi_duyet" options="{'no_quick_create': 1, 'no_create_edit': 1, 'no_open': 1, 'no_create': 1}"
+                                       widget="many2many_tags"  attrs="{'readonly': [('state','!=','draft')]}"/>
+                                <field name="checkin_checkout_id" options="{'no_quick_create': 1, 'no_create_edit': 1, 'no_open': 1, 'no_create': 1}"
+                                       attrs="{'readonly': [('state','!=','draft')]}"/>
+                                <field name="timeofday" readonly="1"/>
+                                <field name="ly_do" required="1" attrs="{'readonly': [('state','!=','draft')]}"/>
+                            </group>
+                    </sheet>
+                </form>
             </field>
         </record>
 
@@ -37,7 +79,7 @@
                     </group>
                     <group>
                         <group>
-                            <field name="block_id"
+                            <field name="department_id"
                                    options="{'no_quick_create': 1, 'no_create_edit': 1, 'no_open': 1, 'no_create': 1}"
                                     class="donvi_chamcong"/>
                         </group>
@@ -85,7 +127,7 @@
                                       class="color_tree_row"
                                       tableFixer="left" fixColumn="2"
                                       default_order="employee_id ASC" limit="100">
-                                    <field name="employee_id" required="1" widget="many2one" context="{'parent_block_id': parent.block_id}"
+                                    <field name="employee_id" required="1" widget="many2one" context="{'parent_department_id': parent.department_id}"
                                            options="{'no_quick_create': 1, 'no_create_edit': 1, 'no_open': 1, 'no_create': 1}"/>
                                     <field name="day" readonly="1" force_save="1"/>
                                     <field name="checkin"/>
@@ -114,7 +156,7 @@
                     <field name="name" filter_domain="['|', ('name','ilike',self), ('ref','ilike',self)]" string="Tên"/>
                     <group expand="0" string="Group By">
                         <filter name="date_from" string="Tháng" domain="[]" context="{'group_by':'date_from'}"/>
-                        <filter name="block_id" string="Khối" domain="[]" context="{'group_by':'block_id'}"/>
+                        <filter name="department_id" string="Đơn vị/ phòng ban" domain="[]" context="{'group_by':'department_id'}"/>
                     </group>
                 </search>
             </field>
@@ -125,7 +167,7 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">datn.hr.checkin.checkout</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{'search_default_date_from':1, 'search_default_block_id':1, 'view_from_action_all': 'datn_hr_checkin_checkout'}</field>
+            <field name="context">{'search_default_date_from':1, 'search_default_department_id':1, 'view_from_action_all': 'datn_hr_checkin_checkout'}</field>
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">
                     Nhập các tiêu chí để tìm kiếm thông tin Bảng checkin checkout.
