--- a/hrm_face_ai/views/hr_employee.xml
+++ b/hrm_face_ai/views/hr_employee.xml
@@ -3,7 +3,7 @@
     <data>
         <record id="view_hr_employee_inherit" model="ir.ui.view">
             <field name="name">hr.face.ai.inherit</field>
-            <field name="model">hrm.employee.profile</field>
+            <field name="model">hr.employee</field>
             <field name="inherit_id" ref="hrm.view_employee_profile_form"/>
             <field name="arch" type="xml">
                <xpath expr="//button[@name='action_send']" position="after">
