--- a/hrm_chamcong/views/datn_chamcong.xml
+++ b/hrm_chamcong/views/datn_chamcong.xml
@@ -6,10 +6,10 @@
             <field name="name">Bảng chấm công tháng</field>
             <field name="model">datn.hr.chamcong</field>
             <field name="arch" type="xml">
-                <tree class="widget-block-tree"
+                <tree class="widget-department-tree"
                       decoration-info="state=='draft'"
-                      default_order="block_id">
-                    <field name="block_id"/>
+                      default_order="department_id">
+                    <field name="department_id"/>
                     <field name="name" string="Tên bảng chấm công"/>
                     <field name="date_from"/>
                     <field name="date_to"/>
@@ -107,7 +107,7 @@
                         <field name="name" string="Tên bảng chấm công" readonly="1" force_save="1"/>
                     </group>
                     <group>
-                        <field name="block_id"
+                        <field name="department_id"
                                options="{'no_quick_create': 1, 'no_create_edit': 1, 'no_open': 1, 'no_create': 1}"
                                 class="donvi_chamcong"/>
                     </group>
@@ -146,7 +146,7 @@
                                     <field name="employee_id"
                                            options="{'no_quick_create': 1, 'no_create_edit': 1, 'no_open': 1, 'no_create': 1}"
                                     />
-                                    <field name="block_id" invisible="1"/>
+                                    <field name="department_id" invisible="1"/>
                                     <field name="cong_chuan" invisible="1"/>
                                     <field name="ngay_cong" invisible="1"/>
                                     <field name="ngay1" />
