--- a/hrm_chamcong/views/datn_dang_ky_nghi_nhanvien.xml
+++ b/hrm_chamcong/views/datn_dang_ky_nghi_nhanvien.xml
@@ -5,11 +5,11 @@
             <field name="name">Đăng ký nghỉ nhân viên</field>
             <field name="model">datn.dangkynghi</field>
             <field name="arch" type="xml">
-                <tree class="widget-khoi-tree"
+                <tree class="widget-department-tree"
                       decoration-info="state=='draft'"
                       default_order="employee_id">
                     <field name="employee_id"/>
-                    <field name="block_id"/>
+                    <field name="department_id"/>
                     <field name="date_from"/>
                     <field name="date_to"/>
                     <field name="loai_nghi"/>
@@ -42,7 +42,7 @@
                     <group>
                         <group>
                             <field options="{'no_quick_create': 1, 'no_create_edit': 1, 'no_open': 1, 'no_create': 1}" name="employee_id" required="1" readonly="1" force_save="1"/>
-                            <field name="block_id"  required="1" readonly="1" force_save="1"/>
+                            <field name="department_id"  required="1" readonly="1" force_save="1"/>
                             <field name="date_from" class="date1 oe_inline" required="1" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                             <field name="date_to" required="1" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                             <field name="ly_do" style="max-width: 200px;" attrs="{'readonly': [('state','!=','draft')]}" domain=""/>
