--- a/hrm_chamcong/views/hr_employee.xml
+++ b/hrm_chamcong/views/hr_employee.xml
@@ -3,10 +3,10 @@
     <data>
         <record id="view_hr_employee_inherit" model="ir.ui.view">
             <field name="name">view.hr.employee.inherit</field>
-            <field name="model">hrm.employee.profile</field>
+            <field name="model">hr.employee</field>
             <field name="inherit_id" ref="hrm.view_employee_profile_form"/>
             <field name="arch" type="xml">
-               <xpath expr="//field[@name='rank_id']" position="after">
+               <xpath expr="//field[@name='department_id']" position="after">
                     <field name="so_ngay_duoc_phan_bo" readonly="1"/>
                     <field name="so_ngay_da_nghi" readonly="1"/>
                     <field name="mail_nhan_thong_bao"/>
