--- a/hrm/views/hr_department_view.xml
+++ b/hrm/views/hr_department_view.xml
@@ -1,4 +1,26 @@
 <odoo>
+    <record id="view_department_search_tree" model="ir.ui.view">
+        <field name="name">hr.department.search.tree</field>
+        <field name="model">hr.department</field>
+        <field name="arch" type="xml">
+            <search string="Departments">
+                <!-- Define fields to be displayed in the search view -->
+                <field name="name" string="Department"/>
+
+                <!-- Define search filters -->
+                <filter string="Unread Messages" name="message_needaction" domain="[('message_needaction','=',True)]"/>
+                <filter string="Archived" name="inactive" domain="[('active','=',False)]"/>
+
+                <!-- Define the search panel to group the tree view -->
+                <searchpanel>
+                    <!-- Group the tree view by 'Manager' field -->
+                    <field name="company_id" groups="base.group_multi_company" icon="fa-building" enable_counters="1"/>
+                    <field name="parent_id" string="Cấu hình công ty" icon="fa-users" />
+                </searchpanel>
+            </search>
+        </field>
+    </record>
+
     <record id="view_departments_form" model="ir.ui.view">
         <field name="name">hr.departments.form</field>
         <field name="model">hr.department</field>
@@ -54,8 +76,10 @@
         <field name="res_model">hr.department</field>
         <!--        <field name="search_view_id" ref="departments_filter"/>-->
         <field name="view_mode">tree,form</field>
-        <field name="view_ids" eval="[(5, 0, 0),
-                (0, 0, {'view_mode': 'tree', 'view_id': ref('view_departments_tree')}),
-                (0, 0, {'view_mode': 'form', 'view_id': ref('view_departments_form')})]"/>
+<!--        <field name="view_ids" eval="[(5, 0, 0),-->
+<!--                (0, 0, {'view_mode': 'tree', 'view_id': ref('view_departments_tree')}),-->
+<!--                (0, 0, {'view_mode': 'form', 'view_id': ref('view_departments_form')})]"/>-->
+        <field name="search_view_id" ref="view_department_search_tree"/>
+
     </record>
 </odoo>
