--- a/hrm_chamcong/views/datn_checkin_checkout.xml
+++ b/hrm_chamcong/views/datn_checkin_checkout.xml
@@ -25,17 +25,15 @@
                 <form>
                     <header>
                         <button string="Gửi phê duyệt" name="action_send_approve" type="object" attrs="{'invisible': [('state','!=','draft')]}"
-                                class="oe_highlight oe_edit_only"/>
+                                class="oe_highlight"/>
                         <button string="Phê duyệt" name="action_approve" type="object" attrs="{'invisible': ['|', ('state','=','draft'), ('state','=','approved')]}"
                                 groups="hrm_chamcong.hrm_phe_duyet_dang_ky_nghi"
-                                class="oe_highlight oe_edit_only"/>
+                                class="oe_highlight"/>
                         <button string="Từ chối" name="action_refuse" type="object" attrs="{'invisible': [('state','!=','approved')]}"
-                                class="oe_highlight oe_edit_only"
+                                class="oe_highlight"
                                 groups="hrm_chamcong.hrm_phe_duyet_dang_ky_nghi"/>
                         <button string="Soạn thảo" name="action_draft" type="object"
-                                attrs="{'invisible': [('state','in',('confirmed','approved'))]}"
-                                class="oe_edit_only"
-                        />
+                                attrs="{'invisible': [('state', 'in', ['confirmed', 'approved'])]}"/>
                         <field name="state" widget="statusbar"/>
                     </header>
                     <sheet>
@@ -67,11 +65,9 @@
                 <form>
                     <header>
                         <button string="Xác nhận" name="action_confirmed" type="object" states="draft"
-                                class="oe_highlight oe_edit_only" groups="hrm_chamcong.hrm_quyen_hr"/>
+                                class="oe_highlight" groups="hrm_chamcong.hrm_quyen_hr"/>
                         <button string="Soạn thảo" name="action_draft" type="object"
-                                states="confirmed" groups="hrm_chamcong.hrm_quyen_hr"
-                                class="oe_edit_only"
-                        />
+                                states="confirmed" groups="hrm_chamcong.hrm_quyen_hr"/>
                         <field name="state" widget="statusbar"/>
                     </header>
                     <group>
