--- a/hrm_chamcong/views/datn_hrm_le_tet.xml
+++ b/hrm_chamcong/views/datn_hrm_le_tet.xml
@@ -24,9 +24,9 @@
                 <form>
                     <header>
                         <button string="Xác nhận" name="action_confirmed" type="object" states="draft"
-                                class="oe_highlight oe_edit_only"/>
+                                class="oe_highlight"/>
                         <button string="Soạn thảo" name="action_draft" type="object"
-                                states="confirmed" class="oe_edit_only"/>
+                                states="confirmed"/>
                         <button string="Tải dữ liệu" name="action_loaddata" type="object" class="oe_highlight oe_edit_only"/>
                         <field name="state" widget="statusbar"/>
                     </header>
